# Codex-Knock

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
codex_knock/: __init__.py  __main__.py  cli.py
codex_nock/: cli.py  config.py  events.py  notifiers.py  popup.py  setup.py
examples/: codex-config.toml  config.toml
scripts/: install-codex-notify.ps1
tests/: test_events.py  test_setup.py
