[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-knock"
version = "0.1.1"
description = "Local-first desktop and phone notifications for Codex task completion."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Codex Knock contributors" }
]
keywords = ["codex", "notifications", "ntfy", "bark", "pushdeer", "wxpusher"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development",
  "Topic :: Utilities"
]
dependencies = []

[project.scripts]
codex-knock = "codex_knock.cli:main"
codex-nock = "codex_nock.cli:main"

[tool.setuptools.packages.find]
include = ["codex_knock*", "codex_nock*"]
